- In Manual Settings dialog, trim string before testing for "End" token, as trailing spaces were causing NumberFormatException (Graham)
- Correct the maximum value of the Duration spinner for LDKP Special Protocol, changing it from 255 to 15 (Graham)
- When importing a .ir file with protocol upgrades not used by device upgrades, add them to ProtocolManager as manual protocols (Graham)

Changes for v1.99b
- Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
- Fixed null pointer exception caused by absence of FavKey entry in RDF (Graham)

Changes for v1.99a
- Fix harmless NullPointerExceptions logged when switching tabs before loading a remote configuration
- Include .ico files in distribution zip
- Fix missing buttons on Devices tab (moved upgrade bug warning to top) 

Changes for v1.99
- Add DigitMaps through 486
- Fix TiVo (Official 2-byte) Unit Code encoding
- Added Kathrein protocol support
- Implemented the functionality of XPIDs in the Special Protocols section (Graham Dixon, a.k.a. mathdon)
- Implemented the functionality of User Names in the Special Protocols section (Graham)
- Corrected the interpretation of a "minus" prefix to PIDs in Special Protocols section (Graham)
- Corrected the keyword WaveUpgrade to WavUpgrade in processing of the General section (Graham)
- Fix keymove space used for keycode keymoves
- Change Apex 1100w protocol to use PID 00 46
- Bugfix:  RMIR crashed if a MacroCodingType entry omitted the optional parameters (Graham)
- Completed the RDF4 syntax for [SpecialProtocols] section by implementing internal special protocols (Graham)
- Corrected the logic that determines when to return the alternatePID instead of the main PID (Graham)
- Corrected getUpgradeLength(), which gave wrong value if remote uses two-byte PID or if digit map is nonzero (Graham)
- Implemented Device-specific Upgrades (RDF General entries DevUpgradeAddr and UpgradeBug) (Graham)